--- a/assets/index.css
+++ b/assets/index.css
@@ -3,11 +3,14 @@
     box-sizing: border-box;
     padding: 0;
     margin: 0;
+    font-family: "Roboto",sans-serif;
 }
 
-body{
-font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+.material-symbols-outlined{
+    color: grey;
+     font-variation-settings: "FILL" 1, "wght" 200, "GRAD" 0, "opsz" 24;
 }
+
 
 nav img{
     height: 80%;
@@ -17,5 +20,46 @@ nav img{
 nav{
     display: flex;
     height: 100px;
+}
 
+main{
+    display: flex;
+}
+.sidebar{
+    width: 18vw;
+}
+
+.sidebar ul li{
+    display: flex;
+    /* justify-content: space-evenly; */
+    gap: 10px;
+    align-items: center;
+    margin: 20px 20px;
+}
+
+hr{
+
+}
+
+.main_content{
+    background-color: #f9f9f9;
+}
+
+.cards{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 100px;
+}
+.card{
+    width: 310px;
+}
+
+.card  img{
+    height: 170px;
+    width: 100%;
+}
+
+.title_block img{
+    height: 40px;
+    width: 40px;
 }
